jar at Dennis's suggestion

--- a/.classpath
+++ b/.classpath
@@ -15,5 +15,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry kind="lib" path="jars/jsoup-1.7.2.jar"/>
 	<classpathentry kind="lib" path="jars/javacsv.jar"/>
+	<classpathentry kind="lib" path="jars/jaxb-api-2.3.0.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
